--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,40 @@
-/* 
+body {
+    font-family: "Montserrat";
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+h1 {
+    font-weight: 100;
+    font-size: 72px;
+}
 
-*/
+ul, form {
+    font-size: 24px;
+}
+
+.tasks-left-class {
+    font-size: 14px;
+}
+
+.input-class {
+    font-size: 1em;
+}
+
+.input-class::placeholder {
+  opacity: 0.4;
+}
+
+.input-class:focus {
+    box-shadow: none;
+}
+
+.close-icon-class, .enter-icon-class {
+    visibility: hidden;
+}
+
+li:hover > .close-icon-class {
+    visibility: visible;
+}
+
+enter-div-class:hover > .enter-icon-class {
+   visibility: visible; 
+}
